--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "mongoose": "^8.0.1",
     "nodemon": "^3.0.1",
     "telegraf": "^3.38.0",
