--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^8.0.1",
+    "netlify-lambda": "^2.0.16",
     "nodemon": "^3.0.2",
     "telegraf": "^3.38.0",
     "telegraf-better-stage": "^1.0.1"
